<resources>
    <string name="app_name">D Grocery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MyNhung Vo</string>
    <string name="nav_header_subtitle">vtmn1212@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Đăng xuất</string>

    <string name="home">Trang chủ</string>
    <string name="profile">Quản lý tài khoản</string>
    <string name="category">Danh mục</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="offers">Ưu đãi</string>
    <string name="new_products">Sản phẩm mới</string>
    <string name="cart">Giỏ hàng</string>
    <string name="orders">Đơn hàng</string>
    <string name="my_account">Tài khoản của tôi</string>
    <string name="see_all">Xem tất cả</string>
    <string name="popular_product">Popular Product</string>
    <string name="description">Description</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="password">Mật khẩu</string>
    <string name="your_name">Tên của bạn</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="address">Địa chỉ</string>
    <string name="popular_products">PopularProducts</string>
    <string name="home_category">HomeCategory</string>
    <string name="recommended_products">RecommendProducts</string>
    <string name="nav_category">NavCategory</string>

    <!-- Categories-->
    <string name="group_meat">thit</string>
    <string name="group_cleaning_house">ve_sinh_nha_cua</string>
    <string name="cham_soc_ca_nhan">cham_soc_ca_nhan</string>
    <string name="mi_goi_an_lien">mi_goi_an_lien</string>
    <string name="dau_an">dau_an</string>
</resources>