<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_category"
            android:title="@string/category" />

        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_offer"
            android:title="@string/offers" />

        <item
            android:id="@+id/nav_new_products"
            android:icon="@drawable/ic_products"
            android:title="@string/new_products" />

        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_cart"
            android:title="@string/cart" />
    </group>

    <item android:title="@string/my_account">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/profile" />

            <item
                android:id="@+id/nav_orders"
                android:icon="@drawable/ic_orders"
                android:title="@string/orders" />
        </menu>
    </item>
</menu>