<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/placeholder" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Name -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/your_name" />

        <EditText
            android:id="@+id/full_name_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edit_text_bg"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="@color/black" />

        <!-- Email -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="Email" />

        <EditText
            android:id="@+id/email_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edit_text_bg"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="@color/black" />

        <!-- Phone Number -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/phone_number" />

        <EditText
            android:id="@+id/phone_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edit_text_bg"
            android:inputType="phone"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="@color/black" />

        <!-- Address -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/address" />

        <EditText
            android:id="@+id/address_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edit_text_bg"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="@color/black" />

        <!-- Actions -->
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:background="@drawable/button_bg"
            android:text="Cập nhật thông tin"
            android:textAllCaps="false"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>