<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_grey"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Header -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/login"
            android:textColor="@color/primary"
            android:textFontWeight="1000"
            android:textSize="36sp"
            android:textStyle="bold" />

        <!-- Email -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="Email" />

        <EditText
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edit_text_bg"
            android:hint="1751010102nhung@ou.edu.vn"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="@color/black" />

        <!-- Password -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="@color/black"
            tools:ignore="SpeakableTextPresentCheck" />

        <!-- Actions -->
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:background="@drawable/button_bg"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bạn chưa có tài khoản?"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:linksClickable="true"
                android:text="@string/register"
                android:textColor="@color/primary"
                android:textSize="18sp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:gravity="center"
            android:indeterminate="true"
            android:indeterminateTint="@color/primary" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>